sm/tests/compile-fail/macro-states-duplicate.rs
extern crate sm;
use sm::sm;

sm!{
//~^ ERROR conflicting implementations of trait `sm::InitialState` for type `Lock::Unlocked`
    Lock {
        InitialStates { Unlocked, Unlocked }
    }
}

fn main() {}
